# Notes

./: .gitignore
AWS/: 1.sh  2.sh  3.sh  4.sh
Assembly/: Notes - x86.asm
C++/: Notes - C++ STD.cpp  Notes - C++.cpp  Notes - CMake.cmake  Notes - CUDA.cpp  Notes - Gtest.cpp  Notes - Parallel Programming.txt  Notes - SDL.cpp  Notes - Vulkan.cpp  Notes - x86 intrinsics.cpp
DesignPatterns/: CMakeLists.txt  Makefile
DesignPatterns/AbstractFactory/: README.md  theory.puml
DesignPatterns/Adapter/: README.md  theory.puml
DesignPatterns/Bridge/: README.md  theory.puml
DesignPatterns/Command/: README.md  theory.puml
DesignPatterns/Composite/: README.md  theory.puml
DesignPatterns/Decorator/: README.md  theory.puml
DesignPatterns/Facade/: README.md  theory.puml
DesignPatterns/Factory/: README.md  theory.puml
DesignPatterns/Iterator/: README.md  theory.puml
DesignPatterns/Observer/: CMakeLists.txt  Observer.cpp  Publisher.hpp  README.md  StockGrabber.cpp  StockGrabber.hpp  StockObserver.cpp  StockObserver.hpp  Subscriber.hpp  impl.puml  implemented.puml  theory.puml
DesignPatterns/Proxy/: README.md  theory.puml
DesignPatterns/Singleton/: README.md  theory.puml
DesignPatterns/State/: README.md  theory.puml
DesignPatterns/Strategy/: Animal.cpp  Animal.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Dog.cpp  Dog.hpp  Flys.cpp  Flys.hpp  README.md  Strategy.cpp  impl.puml  implemented.puml  theory.puml
DesignPatterns/Template/: README.md  theory.puml
DesignPatterns/UmlBasics/: README.md  arrowTypes.puml
DesignPatterns/cmake/: initiate.cmake
Fresh Set-Up/: install - programs.sh  install - python ml env.sh  needed_programs.txt  style.yapf
Fresh Set-Up/profiles/: bash_profile.sh  gtk.css  zshrc.zsh
Fresh/Mac/: code - keybindings.json  code - settings.json  hammerspoon - init.lua  install - programs.sh  install - python ml env.sh  set-up Atom.sh
Fresh/Ubuntu/: albert.sh  dash-to-dock.sh  desktop-wm-keybindings.sh  general-preferences.sh  gtk.css  gtk3.sh  (+19 more)
General/: Notes - Clean Architecture.md  Notes - Operating Systems.md
Kotlin/: Notes - Kotlin.kt
Python/: Notes - ArgParse.py  Notes - MatPlotLib.py  Notes - MujocoPy.py  Notes - NumPy.py  Notes - Pandas.py  Notes - PyGame.py  Notes - PyTest.py  Notes - PyTorch.py  Notes - Python.py  Notes - Scikit-Learn.py  Notes - TensorFlow.py  Notes - iPython.py
Rust/: Notes - Cargo.toml  Notes - Cargo.zsh  Notes - Rust.rs  Notes - Rustc.zsh
Swift/: Notes - Swift.swift
Terminal/: Notes - SQL.sql  Notes - cron.sh  Notes - git.sh  Notes - makefile.mk  Notes - pip offline install.sh  Notes - regex.sh  Notes - ssh.sh  Notes - terminal.sh  Notes - tmux.sh
(+1 files in other folders)
